--- a/public/index.html
+++ b/public/index.html
@@ -3,10 +3,17 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+	<meta name="apple-mobile-web-app-capable" content="yes">
 
+<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+	<meta name<meta name="viewport" content="width=device-width,user-scalable=no,initial-scale=1,minimum-scale=1,maximum-scale=1,minimal-ui=true,viewport-fit=cover"/>
+	<link rel="icon" href="<%= BASE_URL %>favicon.ico">
+	<style> 
+body{
+    font-size:100%;
+    min-height:100vh
+}
+	</style>
     <title>crystal.hair</title>
   </head>
   <body>
