--- a/public/index.html
+++ b/public/index.html
@@ -6,15 +6,9 @@
 	<meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="viewport" content="viewport-fit=cover" />
 
-<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-	<meta name<meta name="viewport" content="width=device-width,user-scalable=no,initial-scale=1,minimum-scale=1,maximum-scale=1,minimal-ui=true,viewport-fit=cover"/>
-	<link rel="icon" href="<%= BASE_URL %>favicon.ico">
-	<style> 
-body{
-    font-size:100%;
-    min-height:100vh
-}
-	</style>
+<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent"/>
+<meta name="viewport" content="width=device-width,user-scalable=no,initial-scale=1,minimum-scale=1,maximum-scale=1,minimal-ui=true,viewport-fit=cover"/>
+	<link rel="icon" href="<%= BASE_URL %>favicon.ico"/>
     <title>crystal.hair</title>
   </head>
   <body>
