--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,8 @@
 <meta name="viewport" content="width=device-width,user-scalable=no,initial-scale=1,minimum-scale=1,maximum-scale=1,minimal-ui=true,viewport-fit=cover"/>
 	<link rel="icon" href="<%= BASE_URL %>favicon.ico"/>
     <title>crystal.hair</title>
+<style>
+</style>
   </head>
   <body>
     <noscript>
