--- a/public/index.html
+++ b/public/index.html
@@ -2,22 +2,15 @@
 <html lang="" >
   <head>
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="apple-mobile-web-app-capable" content="yes">
-<meta name="viewport" content="viewport-fit=cover" />
-
-<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent"/>
-<meta name="viewport" content="width=device-width,user-scalable=no,initial-scale=1,minimum-scale=1,maximum-scale=1,minimal-ui=true,viewport-fit=cover"/>
-	<link rel="icon" href="<%= BASE_URL %>favicon.ico"/>
+	  <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="viewport" content="width=device-width,height=device-height, user-scalable=no,initial-scale=1,minimum-scale=1,maximum-scale=1,minimal-ui=true, viewport-fit=cover"/>
+	  <link rel="icon" href="<%= BASE_URL %>favicon.ico"/>
     <title>crystal.hair</title>
-<style>
-</style>
   </head>
   <body>
     <noscript>
-      <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      <strong>JavaScript Disabled?</strong>
     </noscript>
     <div id="app"></div>
-    <!-- built files will be auto injected -->
   </body>
 </html>
