--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,23 @@
     <meta charset="utf-8">
 	  <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="viewport" content="width=device-width,height=device-height, user-scalable=no,initial-scale=1,minimum-scale=1,maximum-scale=1,minimal-ui=true, viewport-fit=cover"/>
+    <meta name="theme-color" content="#000">
+
+
+</style>
+    <script>
+      if (localStorage.getItem('darkModeBool') === 'true') {
+        document.getElementsByTagName('html')[0].style.backgroundColor = 'black'
+        document.querySelector('meta[name="theme-color"]').setAttribute("content", "black");
+      } else {
+        document.getElementsByTagName('html')[0].style.backgroundColor = 'white'
+        document.querySelector('meta[name="theme-color"]').setAttribute("content", "white");
+      }
+    </script>
+
 	  <link rel="icon" href="<%= BASE_URL %>favicon.ico"/>
     <title>crystal.hair</title>
+
   </head>
   <body>
     <noscript>
