--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="" >
   <head>
-    <meta charset="utf-8">
+    <meta content="text/html; charset=UTF-8">
 	  <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="viewport" content="width=device-width, height=device-height, user-scalable=no,initial-scale=1,minimum-scale=1,maximum-scale=1,minimal-ui=true, viewport-fit=cover"/>
     <meta name="theme-color" content="#000">
