--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="" >
   <head>
+
     <meta content="text/html; charset=UTF-8">
 	  <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="viewport" content="width=device-width, height=device-height, user-scalable=no,initial-scale=1,minimum-scale=1,maximum-scale=1,minimal-ui=true, viewport-fit=cover"/>
@@ -13,6 +14,15 @@
         document.getElementsByTagName('html')[0].style.backgroundColor = 'white'
       }
     </script>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-3RXWJ9J905"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-3RXWJ9J905');
+</script>
 
 	  <link rel="icon" href="<%= BASE_URL %>favicon.ico"/>
     <title>crystal.hair</title>
