removal of old web scrape api components in preperation for web scrape rework

--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,7 @@
 
       gtag('config', 'G-3RXWJ9J905');
     </script>
+    <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/hack-font@3/build/web/hack-subset.css">
 
 	  <link rel="icon" href="<%= BASE_URL %>favicon.ico"/>
     <title>crystal.hair</title>
