removed public files, moved all content to digital ocean

--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
         document.getElementsByTagName('html')[0].style.backgroundColor = 'white'
       }
     </script>
-	  <link rel="icon" href="<%= BASE_URL %>favicon.ico"/>
+	  <link rel="icon" href="https://crystal-hair.nyc3.cdn.digitaloceanspaces.com/favicon%20(1).ico"/>
     <title>crystal.hair</title>
     <!--꒱࿐♡ ˚.*ೃ -->
 
