--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="" >
   <head>
+
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-3RXWJ9J905"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
@@ -9,19 +10,21 @@
       gtag('config', 'G-3RXWJ9J905');
     </script>
 
+    <script>
+      if (localStorage.getItem('darkModeBool') === 'true') {
+        document.getElementsByTagName('html')[0].style.backgroundColor = '#101010'
+      } else {
+        document.getElementsByTagName('html')[0].style.backgroundColor = '#e6e6e6'
+      }
+    </script>
+
     <meta content="text/html; charset=UTF-8">
 	  <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="viewport" content="width=device-width, height=device-height, user-scalable=no,initial-scale=1,minimum-scale=1,maximum-scale=1,minimal-ui=true, viewport-fit=cover"/>
-    <meta name="theme-color" content="#101010">
-    <script>
-      if (localStorage.getItem('darkModeBool') === 'true') {
-        document.getElementsByTagName('html')[0].style.backgroundColor = 'black'
-      } else {
-        document.getElementsByTagName('html')[0].style.backgroundColor = 'white'
-      }
-    </script>
+    <meta name="theme-color" content="var(--background-primary)">
+
 	  <link rel="icon" href="https://crystal-hair.nyc3.cdn.digitaloceanspaces.com/favicon%20(1).ico"/>
-    <title>crystal.hair</title>
+    <title>꒱࿐♡ ˚.*ೃ -</title>
     <!--꒱࿐♡ ˚.*ೃ -->
 
   </head>
